@startuml

class RockPaperScissorsApp {
    +main(args: String[]): void
}

class Game {
    -Player player
    -Player computer
    -int rounds
    +play(): void
    -updateScore(result: String): void
    +determineWinner(humanChoice: ChoiceType, opponentChoice: ChoiceType): String
}

abstract class Player {
    -String name
    -int score
    +abstract makeChoice(): ChoiceType
    +abstract getName(): String
    +abstract getSore(): int
    +updateScore(): void
}

class HumanPlayer {

    -Scanner scan
    +HumanPlayer(String name)
    +HumanPlayer()
    +makeChoice(): ChoiceType
}

class ComputerPlayer {
    -Random randomNum
    +ComputerPlayer()
    +makeChoice(): ChoiceType
}

enum ChoiceType {
    ROCK
    PAPER
    SCISSORS
}

RockPaperScissorsApp --> Game

Game --> Player
Game --> HumanPlayer
Game --> ComputerPlayer
Player <|-- HumanPlayer
Player <|-- ComputerPlayer
Player --> ChoiceType


@enduml
